@@ -1,11 +1,11 @@
 package com.tracker.collectiontracker.mapper;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.tracker.collectiontracker.model.Collectible;
 import com.tracker.collectiontracker.model.Subcategory;
 import com.tracker.collectiontracker.to.CollectibleTO;
+import com.tracker.collectiontracker.to.ImageLinkTO;
 
 /**
  *
@@ -16,22 +16,25 @@ public class CollectibleMapper {
     }
 
     public static List<CollectibleTO> mapEntityListToTOs(List<Collectible> collectibles) {
-        return collectibles.stream().map(CollectibleMapper::mapEntityToTO).collect(Collectors.toList());
+        return collectibles.stream().map(CollectibleMapper::mapEntityToTO).toList();
     }
 
     public static CollectibleTO mapEntityToTO(Collectible collectible) {
         return CollectibleTO.builder()
                 .id(collectible.getId())
                 .subcategory(SubcategoryMapper.mapEntityToTO(collectible.getSubcategory()))
+                .images(collectible.getImages().stream().map(imageLink -> new ImageLinkTO(imageLink.getUrl())).toList())
                 .name(collectible.getName())
                 .addedDate(collectible.getAddedDate())
                 .build();
     }
 
     public static Collectible mapTOtoEntity(CollectibleTO to, Subcategory subcategory) {
-        return Collectible.builder()
+        Collectible collectible = Collectible.builder()
                 .name(to.getName())
                 .subcategory(subcategory)
                 .build();
+        to.getImages().forEach(img -> collectible.addImage(img.getUrl()));
+        return collectible;
     }
 }
